fix broken styles

--- a/packages/itwinui-css/src/footer/footer.scss
+++ b/packages/itwinui-css/src/footer/footer.scss
@@ -14,6 +14,7 @@
 
 .iui-legal-footer-list {
   list-style-type: none;
+  margin: 0;
   margin-inline: auto;
   padding: 0;
   display: flex;
